--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "19.2.0",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
