--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: 20
 
       - name: Install dependencies and build web app
+        env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
         run: |
           npm install
           npm run build
@@ -47,4 +50,3 @@ jobs:
         with:
           name: Rydex-debug-apk
           path: android/app/build/outputs/apk/debug/*.apk
-
