--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           npm install
           npm run build
+          npm run export
 
       - name: Install Capacitor
         run: npm install @capacitor/core @capacitor/cli @capacitor/android
