--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,14 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rydex.app">
 
-    <!-- 🌍 Location permissions -->
+    <!-- 🌍 Location & network permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 👇 Optional: Needed only if you track location in background (after app minimized) -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <!-- 👇 Required for location services on Android 9+ -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <!-- 🔗 Needed for Supabase, maps, etc. -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"   <!-- ✅ Allow local dev APIs over http -->
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
 
         <activity
@@ -33,7 +30,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <provider
@@ -46,5 +42,4 @@
                 android:resource="@xml/file_paths" />
         </provider>
     </application>
-
 </manifest>
