--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file for your Android project
 
 buildscript {
     repositories {
@@ -6,37 +6,18 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.2'
-        classpath 'com.google.gms:google-services:4.4.2'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // Android build tools
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        // ✅ Kotlin plugin – required for Capacitor plugins that use Kotlin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.24"
+        // (Optional) Google services – only needed if you use Firebase etc.
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
-
-apply from: "variables.gradle"
 
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
-}
-
-// ✅ Force all subprojects (including capacitor-android) to use Java 17
-subprojects {
-    afterEvaluate { project ->
-        if (project.hasProperty('android')) {
-            project.android {
-                compileOptions {
-                    sourceCompatibility JavaVersion.VERSION_17
-                    targetCompatibility JavaVersion.VERSION_17
-                }
-            }
-        }
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
