--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "postcss": "^8.5.6",
+    "supabase": "^2.54.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
