chore: ensure NEXT_PUBLIC_SUPABASE_ANON_KEY in Vercel

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,6 +1,6 @@
 [functions.update_driver_location]
 enabled = true
-verify_jwt = false
+verify_jwt = true
 import_map = "./functions/update_driver_location/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
