--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -11,3 +11,14 @@ entrypoint = "./functions/update_driver_location/index.ts"
 
 
 
+
+[functions.get_heat_tiles]
+enabled = true
+verify_jwt = true
+import_map = "./functions/get_heat_tiles/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/get_heat_tiles/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/get_heat_tiles/*.html" ]
